--- a/src/client/css/ui/secondary-navigation.css
+++ b/src/client/css/ui/secondary-navigation.css
@@ -156,7 +156,7 @@
 .secondary-navigation__has-label:hover .secondary-navigation__label,
 .secondary-navigation__has-label:focus-visible .secondary-navigation__label {
   opacity: 1;
-  max-width: 16rem;
+  max-width: 40rem;
   padding: .25rem 1rem .25rem 5rem;
   transform: translateX(0);
 }
